--- a/index.html
+++ b/index.html
@@ -2,20 +2,34 @@
 <html>
 <head>
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-<script>
-var $t_code='${param.code}';
-var $t_id='${param.id}';
-var $t_url='${param.url}';
-$("#t_code").text($t_code);
-$("#t_id").text($t_id);
-$("#t_url").text($t_url);
-</script>
 <script> 
-$(document).ready(function(){
+$(document).ready(function()
+{
+  
   $("button").click(function(){
     $("div").animate({left:'250px'});
   });
+  
+  
+  function getQueryVariable(variable)
+  {
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) 
+       {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+  }
+  
+  $("#t_code").text(getQueryVariable("code"));
+  $("#t_id").text(getQueryVariable("id"));
+  $("#t_url").text(getQueryVariable("url"));
+  
+  
 });
+
 </script> 
 </head>
 <body>
