--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+  
+<title>测试用</title>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<style>
+body {
+	font-family: '微软雅黑';
+	background-color: #96c5ff;
+	color: #fff;
+}
+
+h2, h5 {
+	font-family: '微软雅黑';
+}
+
+.pad-top {
+	padding-top: 60px;
+}
+
+.text-center {
+	text-align: center;
+}
+
+#error-link {
+	font-size: 150px;
+	padding: 10px;
+}
+</style>  
+  
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script> 
 $(document).ready(function()
-{
-  
-  $("button").click(function(){
-    $("div").animate({left:'250px'});
-    $("#t_code").text(getQueryVariable("code"));
-    $("#t_id").text(getQueryVariable("id"));
-    $("#t_url").text(getQueryVariable("url"));
-  });
-  
-  
+{  
   function getQueryVariable(variable)
   {
        var query = window.location.search.substring(1);
@@ -25,25 +50,29 @@ $(document).ready(function()
        }
        return(false);
   }
-  
   $("#t_code").text(getQueryVariable("code"));
   $("#t_id").text(getQueryVariable("id"));
-  $("#t_url").text(getQueryVariable("url"));
-  
-  
+  $("#t_url").text(getQueryVariable("url")); 
 });
-
 </script> 
 </head>
 <body>
+<div class="container">
+		<div class="row pad-top text-center">
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<h2>套餐A：</h2>
+        <p>150元标准:黄瓜，西红柿，土豆，洋葱，油麦菜，芹菜，金针菇，韭菜，樱桃罗卜，胡萝卜，蒜苗或蒜台，茄子，辣椒，圆白菜</p>
+        <h2>套餐B：</h2>
+        <p>180元标准:彩椒，山药，玉米，百合，黄瓜，西红柿，香菇，心里美萝卜，胡萝卜，芹菜，韭菜，蒜台，娃娃菜，金针菇，紫甘蓝，香菜</p>
+        <h2>套餐C：</h2>
+        <p>200元标准:彩椒，紫甘蓝，紫白菜，虫草，韭菜，心里美，白萝卜，紫甘蓝，西蓝花，土豆，芹菜，蒜台，茼蒿，金针菇，樱桃罗卜</p>
+			</div>
+		</div>
+</div>
 <p>hello test</p>
 <p id="t_code" ></p>
 <p id="t_id" ></p>
 <p id="t_url" ></p>
-<button>开始动画</button>
-<p>默认情况下，所有的 HTML 元素有一个静态的位置，且是不可移动的。 
-如果需要改变为，我们需要将元素的 position 属性设置为 relative, fixed, 或 absolute!</p>
-<div style="background:#98bf21;height:100px;width:100px;position:absolute;">
 </div>
 </body>
 </html>
