--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@ $(document).ready(function()
 </head>
 <body>
 <div class="container">
+<button type="button" class="btn btn-primary btn-lg" style="color: rgb(212, 106, 64);">
+<span class="glyphicon glyphicon-chevron-left"></span>
+</button>
+	
 		<div class="row pad-top text-center">
 			<div class="col-md-6 col-md-offset-3 text-center">
-				<h2>套餐A：</h2>
+				<h2>套餐A</h2>
         <p>150元标准:黄瓜，西红柿，土豆，洋葱，油麦菜，芹菜，金针菇，韭菜，樱桃罗卜，胡萝卜，蒜苗或蒜台，茄子，辣椒，圆白菜</p>
-        <h2>套餐B：</h2>
+        <h2>套餐B</h2>
         <p>180元标准:彩椒，山药，玉米，百合，黄瓜，西红柿，香菇，心里美萝卜，胡萝卜，芹菜，韭菜，蒜台，娃娃菜，金针菇，紫甘蓝，香菜</p>
-        <h2>套餐C：</h2>
+        <h2>套餐C</h2>
         <p>200元标准:彩椒，紫甘蓝，紫白菜，虫草，韭菜，心里美，白萝卜，紫甘蓝，西蓝花，土豆，芹菜，蒜台，茼蒿，金针菇，樱桃罗卜</p>
 			</div>
 		</div>
