--- a/index.html
+++ b/index.html
@@ -3,36 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="测试用网页">
+<meta name="author" content="caisizhuo">
   
 <title>测试用</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<style>
-body {
-	font-family: '微软雅黑';
-	background-color: #96c5ff;
-	color: #fff;
-}
-
-h2, h5 {
-	font-family: '微软雅黑';
-}
-
-.pad-top {
-	padding-top: 60px;
-}
-
-.text-center {
-	text-align: center;
-}
-
-#error-link {
-	font-size: 150px;
-	padding: 10px;
-}
-</style>  
   
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
