--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
 <button type="button" class="btn btn-primary btn-lg">
-<span class="glyphicon glyphicon-chevron-left"> 返回啦</span>
+<span class="glyphicon glyphicon-chevron-left"></span>
 </button>
 	
 		<div class="row pad-top text-center">
