--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>测试用</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
-<script src="js/jquery.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 	<div id="iosdiv" style="height:20px"></div>
