--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 });
         });
 }
+		function goBack()
+		{
+				window.location.herf=getUrl;
+		}
 		
 		$("#back").click(function(){goBack(getUrl())});			
 		
