--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="iosdiv" style="height:20px"></div><!--IOS防挡-->
-	<button id="back"  type="button"  style="background:transparent;border:0px;padding-left=0px">
+	<button id="back"  type="button" class="btn btn-primary btn-lg" style="background:transparent;border:0px;padding-left=0px">
 		<span class="glyphicon glyphicon-chevron-left"></span>
 	</button>
 	<div class="container">
