--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 }
 		function goBack()
 		{
-				window.location.herf=getUrl;
+			history.back():
 		}
 		
-		$("#back").click(function(){goBack(getUrl())});			
+		$("#back").click(function(){goBack());			
 		
 		iosShowDiv();
 	});
