--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<p>200元标准:彩椒，紫甘蓝，紫白菜，虫草，韭菜，心里美，白萝卜，紫甘蓝，西蓝花，土豆，芹菜，蒜台，茼蒿，金针菇，樱桃罗卜</p>
 			</div>
 		</div>
-	</div>
+	</div>	
+	<img src="picture/1149252736.jpg">
 </body>
 <script>
 	$(document).ready(function() 
