--- a/index.html
+++ b/index.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head lang="zh">
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-    <link rel="stylesheet" href="css/swiper.min.css">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/swiper.min.js"></script>
-	<title></title>
-	<style>
-	   
-	     .swiper-container {
-	        width: 100%;
-	        margin-left: auto;
-	        margin-right: auto;
-	        margin-top: 20px;
-	        margin-bottom: 20px;
-	    }
-	    .swiper-slide {
-	        text-align: center;
-	        font-size: 18px;
-	        background: #fff;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+<link rel="stylesheet" href="css/swiper.min.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="js/swiper.min.js"></script>
+<title></title>
+<style>
+.swiper-container {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 
-	        /* Center slide text vertically */
-	        display: -webkit-box;
-	        display: -ms-flexbox;
-	        display: -webkit-flex;
-	        display: flex;
-	        -webkit-box-pack: center;
-	        -ms-flex-pack: center;
-	        -webkit-justify-content: center;
-	        justify-content: center;
-	        -webkit-box-align: center;
-	        -ms-flex-align: center;
-	        -webkit-align-items: center;
-	        align-items: center;
-	    }
-	    </style>
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+}
+</style>
 </head>
 <body>
-	<div class="zzsc-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<!-- Swiper -->
-					    <div class="swiper-container">
-					        <div class="swiper-wrapper">
-					            <div class="swiper-slide"><img src="png/1.jpg"></img></div>
-								<div class="swiper-slide"><img src="png/2.png"></img></div>
-					        </div>
-					        <!-- Add Pagination -->
-					        <div class="swiper-pagination"></div>
-					        <!-- Add Arrows -->
-					        <div class="swiper-button-next"></div>
-					        <div class="swiper-button-prev"></div>
-					    </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<!-- Swiper -->
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="png/1.jpg"></img>
+						</div>
+						<div class="swiper-slide">
+							<img src="png/2.png"></img>
+						<div class="swiper-slide">
+							<img src="png/3.jpg"></img>
+						</div>
+					</div>
+					<!-- Add Pagination -->
+					<div class="swiper-pagination"></div>
+					<!-- Add Arrows -->
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
 	<script src="dist/js/swiper.min.js"></script>
 	<!-- Initialize Swiper -->
-    <script>
-    		var swiper = new Swiper('.swiper-container', {
-	        pagination: '.swiper-pagination',
-	        nextButton: '.swiper-button-next',
-	        prevButton: '.swiper-button-prev',
-	        paginationClickable: true,
-	        spaceBetween: 30,
-	        centeredSlides: true,
-	        autoplay: 5000,
-	        autoplayDisableOnInteraction: false
-	    });
-    </script>
+	<script>
+		var swiper = new Swiper('.swiper-container', {
+			pagination : '.swiper-pagination',
+			nextButton : '.swiper-button-next',
+			prevButton : '.swiper-button-prev',
+			paginationClickable : true,
+			spaceBetween : 30,
+			centeredSlides : true,
+			autoplay : 5000,
+			autoplayDisableOnInteraction : false,
+			loop : true
+		});
+	</script>
 </body>
 </html>
