--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
 						</div>
 						<div class="swiper-slide">
 							<img src="png/2.png"></img>
-						<div class="swiper-slide">
-							<img src="png/3.jpg"></img>
+							<div class="swiper-slide">
+								<img src="png/3.jpg"></img>
+							</div>
 						</div>
+						<!-- Add Pagination -->
+						<div class="swiper-pagination"></div>
+						<!-- Add Arrows -->
+						<div class="swiper-button-next"></div>
+						<div class="swiper-button-prev"></div>
 					</div>
-					<!-- Add Pagination -->
-					<div class="swiper-pagination"></div>
-					<!-- Add Arrows -->
-					<div class="swiper-button-next"></div>
-					<div class="swiper-button-prev"></div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script src="dist/js/swiper.min.js"></script>
 	<!-- Initialize Swiper -->
 	<script>
 		var swiper = new Swiper('.swiper-container', {
