--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <style>
 .swiper-container {
 	width: 100%;
+	height: auto;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
@@ -49,16 +50,16 @@
 						</div>
 						<div class="swiper-slide">
 							<img src="png/2.png"></img>
-							<div class="swiper-slide">
-								<img src="png/3.jpg"></img>
-							</div>
 						</div>
-						<!-- Add Pagination -->
-						<div class="swiper-pagination"></div>
-						<!-- Add Arrows -->
-						<div class="swiper-button-next"></div>
-						<div class="swiper-button-prev"></div>
+						<div class="swiper-slide">
+							<img src="png/3.jpg"></img>
+						</div>
 					</div>
+					<!-- Add Pagination -->
+					<div class="swiper-pagination"></div>
+					<!-- Add Arrows -->
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
 				</div>
 			</div>
 		</div>
@@ -74,7 +75,8 @@
 			centeredSlides : true,
 			autoplay : 5000,
 			autoplayDisableOnInteraction : false,
-			loop : true
+			loop : true,
+			autoHeight: true
 		});
 	</script>
 </body>
